# pg2lite

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: real_blog.pgsql  real_composite.pgsql  real_users.pgsql  sample.pgdump  sample_copy.pgsql  sample_copy_csv.pgsql  sample_copy_csv_real_multiline.pgsql  seq_owned.pgsql
src/: lib.rs  main.rs
tests/: cli.rs  conversion_copy.rs  conversion_copy_csv.rs  conversion_example.rs  convert_real_blog.rs  convert_real_composite.rs  convert_real_users.rs  convert_seq_owned.rs  employees.rs  large_perf.rs
