[package]
name = "pg2lite"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Convert PostgreSQL dump files to SQLite (minimal CLI first step)"
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rusqlite = "0.29"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
