[package]
name = "pg2lite"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Convert PostgreSQL dump files to SQLite (minimal CLI first step)"
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rusqlite = { version = "0.29", features = ["bundled"] }
regex = "1"
sqlparser = "0.28"
csv = "1"
which = "4"
flate2 = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
